--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/cooky_recipe_apis
+      - .:/app
     ports:
       - "8000:8000"
     env_file:
@@ -33,3 +33,4 @@ networks:
 
 volumes:
   pgdata:
+  cooky:
